Fix header with logo and texts

--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
 <body>
 <div id="container" >
 	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.png"/>
+			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
 		<h1> Monowar Bhuyan   </h1>
 		<h2> Assistant Professor of Computing Science, Umeå University </h2>
 	</div>
