--- a/Extra/index.html
+++ b/Extra/index.html
@@ -22,7 +22,7 @@
 <body>
 <div id="container" >
 	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.png"/>
+			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
 		<h1> Monowar H. Bhuyan   </h1>
 		<h2> Assistant Professor of Computing Science, Umeå University </h2>
 	</div>
