--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 	</head>
 	<div id="container">
 		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
 			<div id="department">
 				<h1>Department of Computing Science</h1>
 			</div>
-			<div id="main_logo">
-				<img src="pics/umu.svg" />
+			<div id="border_dept_fac">
 			</div>
 			<div id="faculty">
 				<h1>Faculty of Science and Technology</h1>
@@ -43,23 +45,34 @@
 </head>
 
 <body>
-	<div class="flex-container">
-		<div>
-			<p align="center"> <img src="pics/mb_web.jpg" width=200></p>
+	<div class="bio">
+
+		<img id="profile_img" src="pics/mb_web.jpg">
+
+		<div id="affiliation">
+			<h3>Affiliations</h3>
+			<br>
+			<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+				University</li>
+			<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+			<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+					Learning Group</a></li>
+			<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+					target="_blank">Member</a>, Umeå AI </li>
+			<br>
+
 		</div>
-		<div>
 
-			<br><br>
-
-			<h4>Links</h4>
+		<div id="external_links">
+			<h3>Links</h3>
 			<br>
 			<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/" target="_blank">Umeå
 					AI</a></li>
 			<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
-
 			<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
 					Science</a></li>
-			&nbsp;&nbsp;
+			<br>
+			<li>Email: monowar (at) cs.umu.se</li>
 			<br>
 			<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
 				<img src="pics/sg.png" style="width:32px;height:32px;border:0">
@@ -75,34 +88,38 @@
 			</a>
 		</div>
 
-
 	</div>
 
-
-
-</body>
-
-
-<body>
-	<br>
-	<div id="navigation">
+	<div class="navigation">
 
 		<ul>
 			<li class="selected"><a href="index.html">Home</a></li>
+			<div class="nav_border"></div>
 			<li><a href="profile.html">Profile</a></li>
+			<div class="nav_border"></div>
 			<li><a href="research.html">Research</a></li>
+			<div class="nav_border"></div>
 			<li><a href="teaching.html">Teaching</a></li>
+			<div class="nav_border"></div>
 			<li><a href="group.html">Group</a></li>
+			<div class="nav_border"></div>
 			<li><a href="publications.html">Publications</a></li>
+			<div class="nav_border"></div>
 			<li><a href="talks.html">Talks</a></li>
+			<div class="nav_border"></div>
 			<li><a href="activities.html">Community Services</a></li>
+			<div class="nav_border"></div>
 			<li><a href="misc.html">Misc</a></li>
+			<div class="nav_border"></div>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
 
 
 	<div class="contents">
+
+		<h3 class="content_separation">Bio</h3>
+
 		<div> Monowar Bhuyan is a <a href="https://wasp-sweden.org/" target="_blank">WASP</a> Assistant Professor
 			(biträdande universitetslektor) in the Department of Computing Science, Umeå University, Sweden since
 			January 2020 and one of the research group leaders in <a href="http://cloudresearch.org/" target="_blank">
@@ -144,137 +161,145 @@
 			Ministry of Electronics and Information Technology (MeitY), Government of India.
 		</div>
 
-		<div>
-			<h4>Recent News<img border="0" src="pics/new2.gif" /></h4>
-			<br>
+		<h3 class="content_separation">Recent News<img border="0" src="pics/new2.gif" /></h3>
+
+		<div id="recent_news">
 			<ul>
-				<li>3/2023 - Currently looking for a PhD student in <a
-						href="https://umu.varbi.com/what:job/jobID:608365/?lang=en" target="_blank"> serverless edge
-						intelligence </a> at Umeå University, Sweden (Deadline: April 10, 2023).</li>
-				<br>
+				<li>10/2023 - Currently looking for a postdoc in secure federated learning </a> at Umeå University,
+					Sweden (Advt. will be out soon, you may reach to me via Email for any queries).</li>
+
+				<li>9/2023 - Congratulations Tobias! - papers accepted in <a
+						href="https://www.comsoc.org/publications/journals/ieee-tnsm" target="_blank">IEEE TNSM 2023,
+					</a> USA.</li>
+
+				<li>9/2023 - Congratulations Javad and Araki! - papers accepted in <a
+						href="https://hpcn.exeter.ac.uk/trustcom2023/" target="_blank">IEEE TrustCom 2023 </a> Nov 1-3,
+					Exeter, UK.</li>
+
+				<li>4/2023 - Looking for a postdoc in <a href="https://umu.varbi.com/en/what:job/jobID:627666/"
+						target="_blank"> federated learning </a> at Umeå University, Sweden (Deadline: May 30, 2023).
+				</li>
+
+				<li>4/2023 - Looking for a PhD student in <a href="https://umu.varbi.com/en/what:job/jobID:620949"
+						target="_blank"> serverless edge intelligence </a> at Umeå University, Sweden (Deadline: May 11,
+					2023).</li>
+
 				<li>1/2023 - Congratulations! Tobias - a paper accepted in <a href="https://ccgrid2023.iisc.ac.in/"
 						target="_blank"> IEEE/ACM CCGRID, May 1-4, 2023</a>, Bengaluru, India.</li>
-				<br>
-				<li>11/2022 - Currently looking for a PhD student in<a
-						href="https://umu.varbi.com/en/what:job/jobID:571445/" target="_blank"> representation
-						learning</a> with <a href="https://people.cs.umu.se/virginia/" target="_blank"> Professor
-						Virginia Dignum</a> at Umeå University, Sweden</b> (Deadline: December 20, 2022).</li>
-				<br>
-				<li>7/2022 - Currently looking for a postdoc in <a href="https://umu.varbi.com/what:job/jobID:520025/"
+
+				<li>11/2022 - Looking for a PhD student in<a href="https://umu.varbi.com/en/what:job/jobID:571445/"
+						target="_blank"> representation learning</a> with <a href="https://people.cs.umu.se/virginia/"
+						target="_blank"> Professor Virginia Dignum</a> at Umeå University, Sweden</b> (Deadline:
+					December 20, 2022).</li>
+
+				<li>7/2022 - Looking for a postdoc in <a href="https://umu.varbi.com/what:job/jobID:520025/"
 						target="_blank"> federated learning </a> at Umeå University, Sweden</b> (Deadline: July 30,
 					2022).</li>
-				<br>
+
 				<li>2/2022 - Looking for candidates for<a
 						href="https://www.umu.se/en/research/groups/autonomous-distributed-systems-lab/open-positions-ads-lab/"
 						target="_blank"> 15 positions and fellowships within the ADS Lab </a> at Umeå University,
 					Sweden</b> (you can see more details in the link).</li>
-				<br>
+
 				<li>12/2021 - - Hiring - attractive <a
 						href="https://www.umu.se/en/work-with-us/postdoctoral-scholarships/6-2739-21/"
 						target="_blank">six postdocs in distributed systems</a> at Umeå University, Sweden (Deadline for
 					application - <b>February 13, 2022</b>).</li>
 				<br>
-				<li>11/2021 - Congratulations! Tobias - a paper accepted in <a href="https://www.comsnets.org/"
-						target="_blank"> IEEE COMSNETS, Jan 3-8, 2022</a>, Hybrid Mode, Bengaluru, India.</li>
-				<br>
-				<li>10/2021 - Congratulations! Tobias - a paper accepted in <a href="https://ccnc2022.ieee-ccnc.org/"
-						target="_blank"> IEEE CCNC, Jan 8-11, 2022</a>, Virtual.</li>
-				<br>
-				<li>9/2021 - Congratulations! Sourasekhar - a paper accepted in <a href="https://iconip2021.apnns.org/"
-						target="_blank"> ICONIP, Dec 8-12, 2021</a>, Bali, Indonesia.</li>
-
-				<br><br>
-				<li>
-					<h4>you are a student interested in working with me, read <a href="new_students.html">this</a>
-						first.
+				<li>If you are a student interested in working with me, read <a href="new_students.html">this</a> first.
 				</li>
-				</h4>
 			</ul>
-			<br>
-			<hr>
+		</div>
+
+		<h3 class="content_separation">Funded by</h3>
+
+		<div id="funded-by">
+			<div>
+			<a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home" target="_blank">
+				<img src="pics/horizoneurope.jpg" style="height:130px;border:0">
+			</a>
+			<a href="https://wasp-sweden.org/" target="_blank">
+				<img src="pics/wasp_se.jpeg" style="height:80px;border:0">
+			</a>
+			<a href="https://www.kempe.com/" target="_blank">
+				<img src="pics/kempe.png" style="height:40px;border:0">
+			</a>
 		</div>
 		<div>
-			<h4>Funded by:</h4>
-			<br>
-			<div style="text-align: center">
-				<a href="https://www.stint.se/en/" target="_blank">
-					<img src="pics/stint_se.jpeg" style="width:80px;height:80px;border:0">
-				</a> &nbsp;
-				<a href="https://wasp-sweden.org/" target="_blank">
-					<img src="pics/wasp_se.jpeg" style="width:300px;height:80px;border:0">
-				</a> &nbsp;
-				<a href="https://www.nict.go.jp/en/" target="_blank">
-					<img src="pics/nict_jp.png" style="width:300px;height:80px;border:0">
-				</a> &nbsp;
-				</a> &nbsp;
-				<a href="https://www.kempe.com/" target="_blank">
-					<img src="pics/kempe.png" style="width:200px;height:50px;border:0">
-				</a> &nbsp; &nbsp;
-				<a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home" target="_blank">
-					<img src="pics/horizoneurope.jpg" style="width:220px;height:240px;border:0">
-				</a> &nbsp; &nbsp;
-			</div>
-			<br>
-
-			<h4>Universities (alumni and worked):</h4>
-			<br>
-			<div style="text-align: center">
-				<a href="http://www.naist.jp/en/" target="_blank">
-					<img src="pics/naist.jpeg" style="width:80px;height:80px;border:0">
-				</a> &nbsp; &nbsp;
-				<a href="https://www.umu.se/en/" target="_blank">
-					<img src="pics/umu_logo.png" style="width:80px;height:80px;border:0">
-				</a> &nbsp; &nbsp;
-				<a href="https://www.kazirangauniversity.in/" target="_blank">
-					<img src="pics/ku_logo.png" style="width:65px;height:80px;border:0">
-				</a> &nbsp; &nbsp;
-				<a href="http://www.tezu.ernet.in/" target="_blank">
-					<img src="pics/tu_logo.jpg" style="width:80px;height:80px;border:0">
-				</a> &nbsp; &nbsp;
-				<a href="http://www.iete.org/" target="_blank">
-					<img src="pics/logo_iete.jpg" style="width:80px;height:80px;border:0"> </a>
-			</div>
-			<br>
-
-			<br>
-			<div>
-
-
-
-			</div>
-			<br>
-			<div>
-				<div id="footer">
-					<p>&copy; 2023 Monowar Bhuyan </p>
-				</div>
-				<div id="navigation">
-					<ul>
-						<li class="selected"><a href="index.html">Home</a></li>
-						<li><a href="profile.html">Profile</a></li>
-						<li><a href="research.html">Research</a></li>
-						<li><a href="teaching.html">Teaching</a></li>
-						<li><a href="publications.html">Publications</a></li>
-						<li><a href="talks.html">Talks</a></li>
-
-						<li><a href="misc.html">Misc</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-
+			<a href="https://www.stint.se/en/" target="_blank">
+				<img src="pics/stint_se.jpeg" style="height:80px;border:0">
+			</a>
+			<div style="width: 20px;"></div>
+			<a href="https://www.nict.go.jp/en/" target="_blank">
+				<img src="pics/nict_jp.png" style="height:80px;border:0">
+			</a>
+		</div>
 		</div>
 
-		<script type="text/javascript">
-			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-		</script>
-		<script type="text/javascript">
-			try {
-				var pageTracker = _gat._getTracker("UA-1848088-2");
-				pageTracker._trackPageview();
-			} catch (err) { }
-		</script>
+		<h3 class="content_separation">Universities (alumni and worked):</h3>
+
+		<div id="alumni-worked">
+			<a href="http://www.naist.jp/en/" target="_blank">
+				<img src="pics/naist.jpeg" style="width:80px;height:80px;border:0">
+			</a>
+			<a href="https://www.umu.se/en/" target="_blank">
+				<img src="pics/umu_logo.png" style="width:80px;height:80px;border:0">
+			</a>
+			<a href="https://www.kazirangauniversity.in/" target="_blank">
+				<img src="pics/ku_logo.png" style="width:65px;height:80px;border:0">
+			</a>
+			<a href="http://www.tezu.ernet.in/" target="_blank">
+				<img src="pics/tu_logo.jpg" style="width:80px;height:80px;border:0">
+			</a>
+			<a href="http://www.iete.org/" target="_blank">
+				<img src="pics/logo_iete.jpg" style="width:80px;height:80px;border:0"> </a>
+		</div>
 	</div>
+	<div>
+		<div class="navigation">
+			<ul>
+				<li class="selected"><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
+	</div>
+
+
+
+	<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }
+	</script>
+
+
+
 </body>
 
 </html>
