Fix profile page

--- a/profile.html
+++ b/profile.html
@@ -2,206 +2,307 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
-	<head>
-	 <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
-</head>
+	<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
+
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
+	<div id="container">
+
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
+
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+
+		<div class="contents">
+
+			<h3 class="content_separation">Education</h3>
+
+			<div class="profile_sections">
+				<ul>
+					<li>Ph.D. in <i>Computer Science and Engineering</i> from Tezpur University (a Central University),
+						Tezpur, India in 2014.</li>
+					<li>M.Tech. in <i>Information Technology</i> from Tezpur University (a Central University), Tezpur,
+						India in 2009.</li>
+					<li>B.E. in <i>Computer Science and Engineering</i> from The Institution of Electronics and
+						Telecommunication Engineers (IETE), New Delhi, India in 2007.</li>
+				</ul>
+			</div>
+
+			<h3 class="content_separation">Experience</h3>
+
+			<div id="profile_experience">
+				<table>
+					<col width="120">
+					<col width="670">
+					<tr>
+						<td> Jan'20 - Present</td>
+						<td><i>Assistant Professor</i>, Department of Computing Science, Umeå University, Umeå, Sweden
+						</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Apr'19 - Dec'19</td>
+						<td><i>Visiting Researcher</i>, Laboratory for Cyber Resilience, Nara Institute of Science and
+							Technology, Nara, Japan</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Sep'17 - Dec'19</td>
+						<td><i>Researcher</i>, Department of Computing Science, Umeå University, Umeå, Sweden</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Nov'16 - Sep'19 </td>
+						<td><i>Associate Professor</i>, Department of Computer Science and Engineering, Assam Kaziranga
+							University, Jorhat, Assam (last two years as lien from the University).</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Jul'13 - Oct'16</td>
+						<td><i>Assistant Professor</i>, Department of Computer Science and Engineering, Assam Kaziranga
+							University, Jorhat, Assam.</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Apr'11 - Jul'13</td>
+						<td><i>Senior Research Fellow</i>, CSIR, Assistant-ships in Teaching and Research, Department of
+							Computer Science and Engineering, Tezpur University (a Central University), Tezpur, Assam.
+						</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Jan'09 - Apr'11</td>
+						<td><i>Research Staff</i>, Assistant-ships in Teaching and Research, Bioinformatics and Network
+							Security Laboratory, Department of Computer Science and Engineering, Tezpur University (a
+							Central University), Tezpur, Assam.</td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Jul'09 - Jul'13</td>
+						<td><i>Part Time Faculty</i>, NIELIT Centre, Tezpur University (a Central University), Tezpur,
+							Assam.</td>
+					</tr>
+				</table>
+			</div>
+
+			<h3 class="content_separation">Achievements</h3>
+
+			<div class="profile_sections">
+				<!-- <h3>Achievements</h3> -->
+				<ul>
+					<li>Offered positions as <i>post-doc researcher</i> in several countries world-wide. </li>
+					<li>ISOC Kolkata Chapter India awarded the fellowship to attend <i>IETF 98 physical meeting</i> held
+						on
+						March 26-31, 2017 at Chicago, Illinois, USA, approved by Ministry of Electronics and Information
+						Technology (MeitY), Government of India. </li>
+					<li><i>Best Faculty Award</i> at Assam Kaziranga University, Jorhat, 2016 </li>
+					<li><i>Best Paper Award</i>, ACM ICACCI, August 3-5, 2012. </li>
+					<li><i>Senior Research Fellow</i>, Council of Scientific and Industrial Research (CSIR), Govt. of
+						India
+						(2011 - 2013). </li>
+					<li>Junior Research Assistant, Dept. of Information Technology, Ministry of Communication and IT,
+						Govt.
+						of India (2009 - 2011). </li>
+					<li><i>Merit-cum-means PG scholarship</i>, Ministry of Minority Affairs, Govt. of India (2007 -
+						2009).
+					</li>
+				</ul>
+			</div>
+
+			<h3 class="content_separation">Conference and Workshop Participation</h3>
+			
+			<div id="profile-conference-section">
+				<br>
+				.......will be updated soon......
+				<br>
+				<br>
+			</div>
+
+			<h3 class="content_separation">Membership</h3>
+
+			<div class="profile_sections" id="profile-last-section">
+				<!-- <h3>Memberships</h3> -->
+				<ul>
+					<li><i>Member</i> of The Internet Society, United States (No. 144425)</li>
+					<li><i>Life Member</i> of The Institution of Electronics and Telecommunication Engineers (IETE), New
+						Delhi, India (No. AM156909L)</li>
+					<li><i>Member</i> of The Institute of Electrical and Electronics Engineers (IEEE), United States
+						(No.
+						95422076)</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
 	</div>
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li class="selected"><a href="profile.html">Profile</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li><a href="teaching.html">Teaching</a></li>
-		<li><a href="group.html">Group</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li><a href="talks.html">Talks</a></li>
-			<li><a href="activities.html">Community Services</a></li>
-		<li><a href="misc.html">Misc</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
-
-
-<div id="content">
-	<a name="current"> </a>
-<h3>Education</h3>
-<br>
-<ul>
-<li>Ph.D. in <i>Computer Science and Engineering</i> from Tezpur University (a Central University), Tezpur, India in 2014.</li>
-<br>
-<li>M.Tech. in <i>Information Technology</i> from Tezpur University (a Central University), Tezpur, India in 2009.</li>
-<br>
-<li>B.E. in <i>Computer Science and Engineering</i> from The Institution of Electronics and Telecommunication Engineers (IETE), New Delhi, India in 2007.</li>
-
-<!--<br>
-<li>Diploma in <i>Computer Hardware and Networking</i> from Assam Engineering Institute, Guwahati in 2005.</li>
-<br>
-<li>Higher Secondary in <i>Science</i> from Lakhipur H.S. School, Goalpara in 2002. </li>
-<br>
-<li>High School Leaving Certificate from Rajmita High Madrassa, Goalpara in 1999.</li>
--->
-</ul>
-
-<h3>Experience</h3>
-<table>
-	<col width="110">
-  <col width="440">
-  <tr>
-    <td> Jan'20 - Present</td>
-    <td><i>Assistant Professor</i>, Department of Computing Science, Umeå University, Umeå, Sweden</td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-  <tr>
-    <td>Apr'19 - Dec'19</td>
-    <td><i>Visiting Researcher</i>, Laboratory for Cyber Resilience, Nara Institute of Science and Technology, Nara, Japan</td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td>Sep'17 - Dec'19</td>
-    <td><i>Researcher</i>, Department of Computing Science, Umeå University, Umeå, Sweden</td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-		<td>Nov'16 - Sep'19 </td>
-		<td><i>Associate Professor</i>, Department of Computer Science and Engineering, Assam Kaziranga University, Jorhat, Assam (last two years as lien from the University).</td>
-	</tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td>Jul'13 - Oct'16</td>
-    <td><i>Assistant Professor</i>, Department of Computer Science and Engineering, Assam Kaziranga University, Jorhat, Assam.</td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td>Apr'11 - Jul'13</td>
-    <td><i>Senior Research Fellow</i>, CSIR, Assistant-ships in Teaching and Research, Department of Computer Science and Engineering, Tezpur University (a Central University),  Tezpur, Assam.</td>
-  </tr>
-	<tr>
-		<td> </td>
-		<td> </td>
-	</tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-		<td>Jan'09 - Apr'11</td>
-		<td><i>Research Staff</i>, Assistant-ships in Teaching and Research, Bioinformatics and Network Security Laboratory, Department of Computer Science and Engineering, Tezpur University  (a Central University), Tezpur, Assam.</td>
-	</tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td> </td>
-    <td> </td>
-  </tr>
-	<tr>
-    <td>Jul'09 - Jul'13</td>
-    <td><i>Part Time Faculty</i>, NIELIT Centre, Tezpur University (a Central University), Tezpur, Assam.</td>
-  </tr>
-</table>
-<br>
-
-<h3>Achievements</h3>
-<br>
-	<ul>
-		<li>Offered positions as <i>post-doc researcher</i> in several countries world-wide.		</li>
-		<br>
-		<li>ISOC Kolkata Chapter India awarded the fellowship to attend <i>IETF 98 physical meeting</i> held on March 26-31, 2017 at Chicago, Illinois, USA, approved by Ministry of Electronics and Information Technology (MeitY), Government of India.		</li>
-		<br>
-		<li><i>Best Faculty Award</i> at Assam Kaziranga University, Jorhat, 2016		</li>
-		<br>
-		<li><i>Best Paper Award</i>, ACM ICACCI, August 3-5, 2012.		</li>
-		<br>
-		<li><i>Senior Research Fellow</i>, Council of Scientific and Industrial Research (CSIR), Govt. of India (2011 - 2013).		</li>
-		<br>
-		<li>Junior Research Assistant, Dept. of Information Technology, Ministry of Communication and IT, Govt. of India (2009 - 2011).		</li>
-		<br>
-		<li><i>Merit-cum-means PG scholarship</i>, Ministry of Minority Affairs, Govt. of India (2007 - 2009).		</li>
-</ul>
-
-<h3>Conference and Workshop Participation</h3>
-<br>
-.......will be updated soon......
-<br>
-<br>
-
-<h3>Memberships</h3>
-<br>
-<ul>
-<li><i>Member</i> of The Internet Society, United States (No. 144425)</li>
-<li><i>Life Member</i> of The Institution of Electronics and Telecommunication Engineers (IETE), New Delhi, India (No. AM156909L)</li>
-<li><i>Member</i> of The Institute of Electrical and Electronics Engineers (IEEE), United States (No. 95422076)</li>
-</ul>
-</div>
-
-
-<div id="footer">
-	<p>&copy; 2023 Monowar Bhuyan </p>
-</div>
-
-</div>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+	<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }</script>
 
 </body>
 
